# sina-quotes

./: .gitignore  AGENTS.md  Cargo.toml  README.md  ws_subscribe_test.py
docs/superpowers/plans/: 2026-04-10-realtime-kline.md  2026-04-18-quote-subscription-latest-snapshot.md
docs/superpowers/specs/: 2026-04-10-realtime-kline-design.md
examples/: cache.rs  combo.rs  history.rs  history_domestic.rs  history_international.rs  kline1m.rs  new_api.rs  quote.rs  quotes_multi.rs  random_symbols.rs  subscribe_hf_oil.rs
skills/sina-quotes/: SKILL.md
skills/sina-quotes/agents/: openai.yaml
skills/sina-quotes/references/: cli.md  library.md
src/: buffer.rs  cache.rs  client.rs  error.rs  history.rs  lib.rs  main.rs  poll.rs  realtime_kline.rs  series.rs  stream.rs  symbols.rs  types.rs  ws.rs  ws_service.rs
src/data/: buffer.rs  mod.rs  series.rs  types.rs
src/net/: history.rs  mod.rs  ws.rs  ws_service.rs
src/storage/: cache.rs  data_series.rs  mod.rs  quote_cache.rs  rangeset.rs
