[package]
name = "sina-quotes"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Sina finance data: historical K-line and real-time WebSocket subscription"
authors = ["Sina Quotes Team"]
repository = "https://github.com/zynthium/sina-quotes"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
fastwebsockets = { version = "0.8", features = ["upgrade"] }
hyper = { version = "1.5", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "tokio"] }
http-body-util = "0.1"
http = "1"
url = "2"
futures-util = "0.3"
tokio-stream = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
anyhow = "1"

[[example]]
name = "random_symbols"

[[example]]
name = "history_international"

[[example]]
name = "history_domestic"

[[example]]
name = "subscribe_hf_oil"

[dev-dependencies]
tokio-test = "0.4"
rand = "0.8"

[features]
default = []

[profile.release]
opt-level = 3
lto = true